refactor: code refactoring